--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made for the sole purpose of time pass, do  not think that you can be a professional drummer with this.
+    DISCLAIMER:Made for the sole purpose of time pass, do  not think that you can be a professional drummer with this.
   </footer>
   <script src="index.js"></script>
 </body>
